# MutiPurpuse_MCP_Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
ai_scout/: __init__.py
config/: AGENTS.md
config/mcp/: first-run.example.yaml  servers.example.yaml  web-rss.example.yaml
config/policies/: scout-policy.example.yaml
config/profiles/: local.example.yaml
config/sources/: ai-sources.example.yaml  web-rss.example.yaml
data/: AGENTS.md
docs/: AGENTS.md
docs/architecture/: overview.md
docs/operations/: local-runtime.md  rollback.md
docs/security/: secret-handling.md  security-model.md
infra/: AGENTS.md
infra/compose/: docker-compose.example.yaml
infra/docker/: Dockerfile.example
infra/launchd/: com.example.ai-scout.plist.template
infra/scripts/: run-ai-scout.example.sh
scripts/: AGENTS.md  check.sh  doctor.py  doctor.sh  init-local.sh  run-dry.sh
src/ai_scout/: AGENTS.md  __init__.py  __main__.py  cli.py
src/ai_scout/agents/: AGENTS.md  __init__.py  audit.py  base.py  calendar.py  deduplication.py  discovery.py  handoff.py  inspection.py  planning.py  ranking.py  types.py
src/ai_scout/config/: __init__.py  loader.py
tests/: AGENTS.md
tests/unit/: test_agents_specialists.py  test_config_loader.py  test_graph_orchestration.py  test_mcp_fake_gateway.py  test_mcp_local_servers.py  test_mcp_registry.py  test_mcp_stdio_client.py  test_memory_store.py  test_models_core.py  test_policies_core.py  test_reporting.py  test_scheduling_core.py
(+40 files in other folders)
